[package]
name = "MyLib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
directories = "6.0.0"
gilrs = "0.11.2"
image = "0.24"
is_elevated = "0.1.2"
percent-encoding = "2.3.2"

rfd = "0.17.2"
runas = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.38.4"
tray-icon = "0.24.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
winit = "0.30.13"
wry = "0.55.1"

[build-dependencies]
winres = "0.1.12"
